# lots_o_slots_cli

./: .gitignore  Cargo.toml  README.md
src/: account.rs  los.rs  main.rs  slot_machine.rs
