[package]
name = "lots_o_slots_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "los"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.147", features = ["derive"]}
toml = "0.5.9"
